src/test/ui/resolve/tuple-struct-alias.stderr
error[E0423]: expected function, found type alias `A`
  --> $DIR/tuple-struct-alias.rs:5:13
   |
LL |     let s = A(0, 1);
   |             ^ help: a tuple struct with a similar name exists: `S`
   |
   = note: can't use a type alias as a constructor

error[E0532]: expected tuple struct/variant, found type alias `A`
  --> $DIR/tuple-struct-alias.rs:7:9
   |
LL |         A(..) => {}
   |         ^ help: a tuple struct with a similar name exists: `S`
   |
   = note: can't use a type alias as a constructor

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0532.
For more information about an error, try `rustc --explain E0423`.
